# eth-erc20-faucet

./: .gitignore  .gitlab-ci.yml  Dockerfile
python/: .coverage  .coveragerc  CHANGELOG  MANIFEST.in  requirements.txt  setup.cfg  test_requirements.txt
python/erc20_faucet/: faucet.py  interface.py
python/erc20_faucet/data/: ERC20Faucet.json
python/erc20_faucet/runnable/: deploy.py  list.py
python/erc20_single_shot_faucet/: __init__.py  faucet.py  interface.py
python/erc20_single_shot_faucet/data/: ERC20SingleShotFaucet.json  ERC20SingleShotFaucetStorage.json  SingleShotFaucet.abi.json
python/erc20_single_shot_faucet/runnable/: deploy.py  list.py
python/tests/: test_app.py  test_basic.py  test_contract.py
solidity/: ERC20Faucet.sol  ERC20FaucetStorage.sol  ERC20SingleShotFaucet.json  ERC20SingleShotFaucet.sol  ERC20SingleShotFaucetStorage.abi.json  ERC20SingleShotFaucetStorage.json  ERC20SingleShotFaucetStorage.sol  IERC20SingleShotFaucetStorage.abi.json  IERC20SingleShotFaucetStorage.sol  Makefile
