[metadata]
name = erc20-single-shot-faucet
version = 0.1.2
description = ERC20 token faucet that can be used once per account
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/simple-multisig
keywords =
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
	#Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	erc20_single_shot_faucet
	erc20_single_shot_faucet.runnable
install_requires =
	web3==5.12.2
tests_require =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.extras_require]
testing =
	eth-tester==0.5.0b2
	py-evm==0.3.0a20

[options.package_data]
* = 
	data/ERC20SingleShotFaucet.json
	data/ERC20SingleShotFaucet.bin
	data/ERC20SingleShotFaucetStorage.json
	data/ERC20SingleShotFaucetStorage.bin

[options.entry_points]
console_scripts =
	erc20-single-shot-faucet-deploy = erc20_single_shot_faucet.runnable.deploy:main
